SonarQube modified AESUtil, Added DeleteController